src/components/templates/andMiniplayer.module.scss
@import '../../styles/common';

.contentWithPlayer {
	@media (min-width: $breakpoint-lg) {
		padding-bottom: $miniplayer-height;
	}
}

.videoOrigin,
.videoOrigin * {
	visibility: hidden !important;
	height: 0;
}

.helpButton {
	position: fixed;
	bottom: 24px;
	right: calc(24px + env(safe-area-inset-right));
	z-index: 999;
}

:global(.andMiniplayer--withPlayer) .helpButton {
	bottom: $miniplayer-height + 24px;
}

.andMiniplayer :global(.BeaconContainer) {
	bottom: 31px + 24px + 24px;
	border: 10px solid blue;
}

